P2: Resolved issues
1- Close buttons are now displayed! (They were in display: none due to a commented out <div> in the html page)
2- Interactions objects of each state no longer overlap each other! (I needed to hide the html elements from the other states and show the ones that are specific to that states)

--- a/projects/project2/final/css/style.css
+++ b/projects/project2/final/css/style.css
@@ -324,6 +324,26 @@ canvas {
   z-index: 60;
 }
 
+.clue-btn {
+  font-size: 1.75rem;
+  font-weight: 600;
+  color: #202020;
+  background-color: #fff5ec;
+  border: none;
+  border-radius: 1rem;
+  padding: 1rem;
+  position: fixed;
+  top: 70%;
+  left: 60%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+}
+
+.clue-btn:hover {
+  background-color: rgb(130, 3, 161);
+  color: #fff5ec;
+}
+
 #clue-to-read-1 {
   display: none;
 }
